auto show demo + fix sliders not aligned

--- a/Viz/style.css
+++ b/Viz/style.css
@@ -142,7 +142,6 @@
 
 .text-center {
     display: inline-block;
-    margin: auto;
 }
 
 div.tooltip {
